2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Tests.Rules.Naming.csproj: Activate makefile integration for all the
	rules projects. Remove the old mdp files as they are no longer
	needed.

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* UseCorrectSuffixTest.cs: Convert to new, shorter, syntax. Move 
	test cases from EnumNotEndsWithEnumOrFlagsSuffixTest here.

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectPrefixTest.cs: Convert to new, shorter, syntax. Add test
	cases for generic type parameters.

2008-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Naming.mdp: Add AvoidDeepNamespaceHierarchyTest to
	MD project file.

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeepNamespaceHierarchyTest.cs: New. Unit tests for 
	AvoidDeepNamespaceHierarchyRule.
	* DetectNonAlphaNumericsInTypeNamesTest.cs: Add test cases for
	namespaces. Convert to new, shorter, syntax.
	* DoNotPrefixEventsWithAfterOrBeforeTest.cs: Add test cases for 
	structures.
	* UseCorrectCasingTest.cs: Add test cases for namespaces. Convert
	to new, shorter, syntax.
	* UsePreferredTermsTest.cs: Add test cases for namespaces. Convert
	to new, shorter, syntax.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectCasingTest.cs: Convert namespace tests (ITypeRule) to 
	the new syntax. Add a few more tests for more coverage.

2008-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotPrefixEventsWithAfterOrBeforeTest.cs: New. Unit tests for
	DoNotPrefixEventsWithAfterOrBeforeRule

2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Naming.mdp: Fix references.

2008-04-26  Jb Evain  <jbevain@novell.com>

	* UseCorrectCasingTest.cs: add tests for namespace casing
	checks.

2008-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* UseCorrectCasingTest.cs: Fix test case for compiler-generated code
	(anonymous methods) and CSC.
	* UseCorrectSuffixTest.cs: Add test cases for generics.
